<resources>
    <string name="app_name">Doscord</string>
    <string name="welcome">WELCOME TO\nDOSCORD</string>
    <string name="desc">Hang out, play games, or just talk. Tap below to get started.</string>
    <string name="register">Register</string>
    <string name="login">Log In</string>
    <string name="back">Back</string>
    <string name="phoneOrMail">Enter phone or email</string>
    <string name="phone">Phone</string>
    <string name="email">Email</string>
    <string name="background">Background</string>
    <string name="password">Password</string>
    <string name="welcome_back">Welcome back!</string>
    <string name="we_re_so_excited_to_see_you_again">We\'re so excited to see you again</string>
    <string name="email_or_username">Email or Username</string>
    <string name="phone_number">Phone Number</string>
    <string name="next">Next</string>
    <string name="usernameWarning">Only use letters, numbers, underscores _, and periods.</string>
    <string name="usernameTakenWarning">Username is unavailable. Try adding numbers, letters, underscores _, or periods.</string>
    <string name="usernameAvailable">Username is available. Nice!</string>
    <string name="passwordWarning">Password must be 8 or more characters. Strong password have a symbol, one uppercase, and lowercase letter.</string>
    <string name="passWeak">Password Strength: Weak</string>
    <string name="passMedium">Password Strength: Medium</string>
    <string name="passStrong">Password Strength: Strong</string>
    <string name="regSuccessful">Registration Successful!</string>

    <string name="what_s_your_name">What\'s your name?</string>
    <string name="first_fragment_label">First fragment</string>
    <string name="second_fragment_label">Second fragment</string>
    <string name="userLengthWarning">This must be 2–32 characters.</string>
    <string name="nextCreateAnAccount">Next, create an account</string>
    <string name="please_enter_a_valid_email_address">Please enter a valid email address!</string>
    <string name="login_or_password_is_invalid">Login or password is invalid.</string>
    <string name="forgot_your_password">Forgot your password?</string>
    <string name="toggle_password_visibility">Toggle password visibility.</string>
    <string name="email_or_phone_number">Email or Phone Number</string>
    <string name="loginTogether">Login</string>
    <string name="skip">Skip</string>
    <string name="display_name">Display Name</string>
    <string name="you_can_use_emoji_and_special_characters">You can use emoji and special characters.</string>
    <string name="usernameUpper">USERNAME</string>
    <string name="passwordUpper">PASSWORD</string>
    <string name="server_error_restart_app_and_try_again">Server Error! Restart app and try again!</string>
    <string name="generic_server_error">Generic server Error!</string>
    <string name="and_how_old_are_you">And, how old are you?</string>
    <string name="date_of_birth">Date of Birth</string>
    <string name="must_be_at_least_13_years_old_to_create_an_account">Must be at least 13 years old to create an account.</string>
    <string name="create_account">Create Account</string>
    <string name="profile_picture">Profile picture</string>
    <string name="server_error_check_your_network_connection_and_try_again">Server Error! Check your network connection and try again.</string>
    <string name="loading">Loading..</string>
    <string name="profile">Profile</string>
    <string name="or_choose_a_doscord_avatar">or choose a Doscord avatar</string>
    <string name="click_to_select_profile_picture">Click to select profile picture</string>
    <string name="choose_a_photo_that_represents_you">Choose a photo that represents you!</string>
    <string name="choose_profile_picture">Choose profile picture</string>
    <string name="you">You</string>
    <string name="notifications">Notifications</string>
    <string name="home">Home</string>
    <string name="add_friends">Add Friends</string>
    <string name="at">\@</string>
    <string name="add_by_username">Add by Username</string>
    <string name="who_would_you_like_to_add_as_a_friend">Who would you like to add as a friend?</string>
    <string name="enter_a_username">Enter a username</string>
    <string name="by_the_way_your_username_is">"By the way, your username is "</string>
    <string name="send_friend_request">Send Friend Request</string>
    <string name="friend_request_sent">Friend request sent!</string>
    <string name="sent_you_a_friend_request">" sent you a friend request."</string>
    <string name="emojis">Emojis</string>
    <string name="send">send</string>
    <string name="messages">Messages</string>
    <string name="plus">Add</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="add_friendly_nickname">Add a Friendly Nickname</string>
    <string name="remove_friend">Remove friend</string>
    <string name="block">Block</string>
    <string name="leave_group">Leave Group</string>
    <string name="rename_group">Rename Group</string>
    <string name="set_nickname">Set Nickname</string>
    <string name="enter_friendly_nickname">Enter a friendly nickname for this person</string>
    <string name="nickname">Nickname</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
</resources>