<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/home"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="207dp"
        android:layout_height="149dp"
        android:layout_marginBottom="-10dp"
        android:contentDescription="@string/background"
        app:layout_constraintBottom_toTopOf="@+id/mainTitle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/icon" />

    <TextView
        android:id="@+id/mainTitle"
        android:layout_width="442dp"
        android:layout_height="115dp"
        android:fontFamily="@font/anton"
        android:gravity="center"
        android:letterSpacing="0.05"
        android:scaleX="1.5"
        android:scaleY="0.9"
        android:text="@string/welcome"
        android:textColor="@color/white"
        android:textSize="40sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/register"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.5"
        app:lineHeight="55dp" />

    <TextView
        android:id="@+id/subtitle"
        android:layout_width="341dp"
        android:layout_height="80dp"
        android:layout_marginStart="50dp"
        android:layout_marginTop="-10dp"
        android:layout_marginEnd="50dp"
        android:gravity="center"
        android:text="@string/desc"
        android:textColor="@color/white"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/mainTitle" />

    <Button
        android:id="@+id/register"
        android:layout_width="0dp"
        android:layout_height="55dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="96dp"
        android:backgroundTint="@color/white"
        android:onClick="openRegisterActivity"
        android:text="@string/register"
        android:textColor="@color/black"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/login"
        android:layout_width="0dp"
        android:layout_height="55dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="37dp"
        android:backgroundTint="#1E2B8C"
        android:onClick="openLoginActivity"
        android:text="@string/login"
        android:textColor="@color/white"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/register" />

</androidx.constraintlayout.widget.ConstraintLayout>