<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:animateLayoutChanges="true"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bgGray"
    tools:context=".activities.menu.RegUserActivity">

    <TextView
        android:id="@+id/regUserServerWarning"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="7dp"
        android:layout_marginEnd="20dp"
        android:letterSpacing="0.02"
        android:text="@string/server_error_check_your_network_connection_and_try_again"
        android:textColor="@color/red"
        android:textSize="12sp"
        android:textStyle="bold"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/regUserNextBtn" />

    <TextView
        android:id="@+id/regUserUserWarning"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="7dp"
        android:layout_marginEnd="20dp"
        android:letterSpacing="0.02"
        android:text="@string/usernameWarning"
        android:textColor="@color/gray"
        android:textSize="12sp"
        android:textStyle="bold"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/regUserUserInput" />

    <TextView
        android:id="@+id/regUserPassWarning"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="7dp"
        android:layout_marginEnd="20dp"
        android:letterSpacing="0.02"
        android:text="@string/passWeak"
        android:textColor="@color/red"
        android:textSize="12sp"
        android:textStyle="bold"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/regUserPassContainer" />

    <TextView
        android:id="@+id/regUserPassWarning2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="7dp"
        android:layout_marginEnd="20dp"
        android:letterSpacing="0.02"
        android:text="@string/passwordWarning"
        android:textColor="@color/gray"
        android:textSize="12sp"
        android:textStyle="bold"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/regUserPassWarning" />

    <ImageButton
        android:id="@+id/regUserBackBtn"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="10dp"
        android:background="@android:color/transparent"
        android:contentDescription="@string/back"
        android:onClick="finish"
        android:padding="12dp"
        android:scaleType="centerInside"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/back_arrow"
        app:tint="@color/textGray" />

    <TextView
        android:id="@+id/regUserTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:text="@string/nextCreateAnAccount"
        android:textColor="#FFFFFF"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/regUserUserLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="30dp"
        android:labelFor="@id/regUserUserInput"
        android:text="@string/usernameUpper"
        android:textColor="@color/labelGray"
        android:textSize="12sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/regUserTitle" />

    <EditText
        android:id="@+id/regUserUserInput"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:layout_marginHorizontal="20dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="20dp"
        android:autofillHints="username"
        android:background="@drawable/input_background"
        android:inputType="text"
        android:paddingHorizontal="15dp"
        android:textColor="#FFFFFF"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/regUserUserLabel" />

    <TextView
        android:id="@+id/regUserPassLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:labelFor="@id/regUserPassInput"
        android:text="@string/passwordUpper"
        android:textColor="@color/labelGray"
        android:textSize="12sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/regUserUserWarning" />

    <RelativeLayout
        android:id="@+id/regUserPassContainer"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/regUserPassLabel">

        <EditText
            android:id="@+id/regUserPassInput"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:autofillHints="password"
            android:background="@drawable/input_background"
            android:inputType="textPassword"
            android:paddingStart="15dp"
            android:paddingEnd="48dp"
            android:textSize="16sp" />

        <ImageButton
            android:id="@+id/regUserEyeBtn"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:layout_marginEnd="8dp"
            android:background="@android:color/transparent"
            android:contentDescription="@string/toggle_password_visibility"
            android:onClick="regSwitchEye"
            android:src="@drawable/eye_closed" />

    </RelativeLayout>

    <Button
        android:id="@+id/regUserNextBtn"
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        android:alpha="0.5"
        android:backgroundTint="#5865f2"
        android:enabled="false"
        android:onClick="openRegBdayActivity"
        android:text="@string/next"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/regUserPassWarning2" />

</androidx.constraintlayout.widget.ConstraintLayout>