<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bgGray"
    tools:context=".activities.menu.RegPfpActivity">

    <TextView
        android:id="@+id/crPfpServerWarning"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="7dp"
        android:layout_marginEnd="20dp"
        android:letterSpacing="0.02"
        android:text="@string/server_error_check_your_network_connection_and_try_again"
        android:textColor="@color/red"
        android:textSize="12sp"
        android:textStyle="bold"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/crPfpNextBtn" />

    <Button
        android:id="@+id/crPfpSkipBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="10dp"
        android:background="@android:color/transparent"
        android:hapticFeedbackEnabled="false"
        android:onClick="finish"
        android:stateListAnimator="@null"
        android:text="@string/skip"
        android:textColor="#ddd"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/crPfpTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="55dp"
        android:gravity="center"
        android:letterSpacing="0.02"
        android:text="@string/choose_profile_picture"
        android:textColor="#FFFFFF"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/crPfpSubtitle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="50dp"
        android:gravity="center"
        android:text="@string/choose_a_photo_that_represents_you"
        android:textColor="#aaa"
        android:textSize="14sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/crPfpTitle" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/crPfpContainer"
        android:layout_width="190dp"
        android:layout_height="190dp"
        android:layout_marginTop="30dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/crPfpSubtitle">

        <View
            android:id="@+id/crPfpBorder"
            android:layout_width="185dp"
            android:layout_height="185dp"
            android:background="@drawable/dashed_border"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageButton
            android:id="@+id/crPfpBtn"
            android:layout_width="170dp"
            android:layout_height="170dp"
            android:background="@null"
            android:contentDescription="@string/click_to_select_profile_picture"
            android:onClick="openLauncher"
            android:scaleType="centerCrop"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/crPfpPlusContainer"
            android:layout_width="45dp"
            android:layout_height="45dp"
            android:layout_marginTop="2dp"
            android:layout_marginEnd="2dp"
            app:cardBackgroundColor="@color/blue"
            app:cardCornerRadius="50dp"
            app:cardElevation="0dp"
            app:cardMaxElevation="0dp"
            app:layout_constraintCircle="@+id/crPfpBtn"
            app:layout_constraintCircleAngle="45"
            app:layout_constraintCircleRadius="85dp"
            app:layout_constraintEnd_toStartOf="@+id/crPfpBtn"
            app:layout_constraintTop_toBottomOf="@+id/crPfpBtn"
            app:strokeColor="@color/bgGray"
            app:strokeWidth="5dp"
            tools:ignore="MissingConstraints">

            <ImageView
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:layout_gravity="center"
                android:contentDescription="@string/plus"
                android:src="@drawable/plus"
                app:tint="@color/white" />

        </com.google.android.material.card.MaterialCardView>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <TextView
        android:id="@+id/crPfpSubtitle2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="50dp"
        android:gravity="center"
        android:text="@string/or_choose_a_doscord_avatar"
        android:textColor="#aaa"
        android:textSize="14sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/crPfpContainer" />

    <TableLayout
        android:id="@+id/crPfpTableLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/crPfpSubtitle2" />

    <Button
        android:id="@+id/crPfpNextBtn"
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="7dp"
        android:layout_marginEnd="20dp"
        android:backgroundTint="#5865f2"
        android:onClick="sendPfpToServer"
        android:text="@string/next"
        android:textColor="@color/white"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/crPfpTableLayout" />


</androidx.constraintlayout.widget.ConstraintLayout>